--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -140,6 +140,29 @@ properties.number_values_nullable.values.1_dot_2 = version 1.2
 properties.number_values_nullable.values.2 = version 2.0
 properties.number_values_nullable.null_value = null value
 
+properties.currency.label = Currency
+properties.currency.placeholder = Currency Placeholder
+properties.currency.search.label = Currency in Search
+properties.currency.search.placeholder = Currency Placeholder in Search
+properties.currency.search.range.from.label = Currency Range From in Search
+properties.currency.search.range.to.label = Currency Range To in Search
+properties.currency.search.range.from.placeholder = Currency Placeholder Range From in Search
+properties.currency.search.range.to.placeholder = Currency Placeholder Range To in Search
+properties.currency.error.NOT_NULLABLE = Currency not Nullable error
+properties.currency.error.TOO_LARGE = Currency too large error
+properties.currency.error.TOO_MANY_DECIMALS = Currency too many decimals error
+
+properties.currency_nullable.label = Currency Nullable
+properties.currency_nullable.placeholder = Currency Nullable Placeholder
+properties.currency_nullable.search.label = Currency Nullable in Search
+properties.currency_nullable.search.placeholder = Currency Nullable Placeholder in Search
+properties.currency_nullable.search.range.from.label = Currency Nullable Range From in Search
+properties.currency_nullable.search.range.to.label = Currency Nullable Range To in Search
+properties.currency_nullable.search.range.from.placeholder = Currency Nullable Placeholder Range From in Search
+properties.currency_nullable.search.range.to.placeholder = Currency Nullable Placeholder Range To in Search
+properties.currency_nullable.error.TOO_LARGE = Currency Nullable too large error
+properties.currency_nullable.error.TOO_MANY_DECIMALS = Currency Nullable too many decimals error
+
 [es]
 name = Test de Definición de Item
 
@@ -282,3 +305,26 @@ properties.number_values_nullable.values.1_dot_1 = Versión 1.1
 properties.number_values_nullable.values.1_dot_2 = Versión 1.2
 properties.number_values_nullable.values.2 = Versión 2.0
 properties.number_values_nullable.null_value = valor null
+
+properties.currency.label = Valor Monetario
+properties.currency.placeholder = Valor Monetario Marcador
+properties.currency.search.label = Valor Monetario en Modo Búsqueda
+properties.currency.search.placeholder = Valor Monetario Marcador en Modo Búsqueda
+properties.currency.search.range.from.label = Valor Monetario en Modo Búsqueda Desde
+properties.currency.search.range.from.placeholder = Valor Monetario Marcador en Modo Búsqueda Desde
+properties.currency.search.range.to.label = Valor Monetario en Modo Búsqueda Hasta
+properties.currency.search.range.to.placeholder = Valor Monetario Marcador en Modo Búsqueda Hasta
+properties.currency.error.NOT_NULLABLE = Valor Monetario error de no Nullable
+properties.currency.error.TOO_LARGE = Valor Monetario demasiado larga error
+properties.currency.error.TOO_MANY_DECIMALS = Valor Monetario demasiados decimales error
+
+properties.currency_nullable.label = Valor Monetario Nullable
+properties.currency_nullable.placeholder = Valor Monetario Nullable Marcador
+properties.currency_nullable.search.label = Valor Monetario Nullable en Modo Búsqueda
+properties.currency_nullable.search.placeholder = Valor Monetario Nullable Marcador en Modo Búsqueda
+properties.currency_nullable.search.range.from.label = Valor Monetario Nullable en Modo Búsqueda Desde
+properties.currency_nullable.search.range.from.placeholder = Valor Monetario Nullable Marcador en Modo Búsqueda Desde
+properties.currency_nullable.search.range.to.label = Valor Monetario Nullable en Modo Búsqueda Hasta
+properties.currency_nullable.search.range.to.placeholder = Valor Monetario Nullable Marcador en Modo Búsqueda Hasta
+properties.currency_nullable.error.TOO_LARGE = Valor Monetario Nullable demasiado larga error
+properties.currency_nullable.error.TOO_MANY_DECIMALS = Valor Monetario Nullable demasiados decimales error
