--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -1,6 +1,7 @@
 [en]
 name = English
-number_separator = .
+number_decimal_separator = .
+currency_format = $N
 
 yes = yes
 no = no
@@ -20,7 +21,8 @@ format_add_video = add embed video
 
 [es]
 name = Español
-number_separator = ,
+number_decimal_separator = ,
+currency_format = N$
 
 yes = si
 no = no
