datetime whole support

--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -163,6 +163,69 @@ properties.currency_nullable.search.range.to.placeholder = Currency Nullable Pla
 properties.currency_nullable.error.TOO_LARGE = Currency Nullable too large error
 properties.currency_nullable.error.TOO_MANY_DECIMALS = Currency Nullable too many decimals error
 
+properties.date.label = Date
+properties.date.placeholder = Date Placeholder
+properties.date.search.label = Date in Search
+properties.date.search.placeholder = Date Placeholder in Search
+properties.date.search.range.from.label = Date Range From in Search
+properties.date.search.range.to.label = Date Range To in Search
+properties.date.search.range.from.placeholder = Date Placeholder Range From in Search
+properties.date.search.range.to.placeholder = Date Placeholder Range To in Search
+properties.date.error.NOT_NULLABLE = Date not Nullable error
+properties.date.error.INVALID_DATETIME = Date Invalid
+
+properties.date_nullable.label = Date Nullable
+properties.date_nullable.placeholder = Date Nullable Placeholder
+properties.date_nullable.search.label = Date Nullable in Search
+properties.date_nullable.search.placeholder = Date Nullable Placeholder in Search
+properties.date_nullable.search.range.from.label = Date Nullable Range From in Search
+properties.date_nullable.search.range.to.label = Date Nullable Range To in Search
+properties.date_nullable.search.range.from.placeholder = Date Nullable Placeholder Range From in Search
+properties.date_nullable.search.range.to.placeholder = Date Nullable Placeholder Range To in Search
+properties.date_nullable.error.INVALID_DATETIME = Date Nullable Invalid
+
+properties.datetime.label = Datetime
+properties.datetime.placeholder = Datetime Placeholder
+properties.datetime.search.label = Datetime in Search
+properties.datetime.search.placeholder = Datetime Placeholder in Search
+properties.datetime.search.range.from.label = Datetime Range From in Search
+properties.datetime.search.range.to.label = Datetime Range To in Search
+properties.datetime.search.range.from.placeholder = Datetime Placeholder Range From in Search
+properties.datetime.search.range.to.placeholder = Datetime Placeholder Range To in Search
+properties.datetime.error.NOT_NULLABLE = Datetime not Nullable error
+properties.datetime.error.INVALID_DATETIME = Datetime Invalid
+
+properties.datetime_nullable.label = Datetime Nullable
+properties.datetime_nullable.placeholder = Datetime Nullable Placeholder
+properties.datetime_nullable.search.label = Datetime Nullable in Search
+properties.datetime_nullable.search.placeholder = Datetime Nullable Placeholder in Search
+properties.datetime_nullable.search.range.from.label = Datetime Nullable Range From in Search
+properties.datetime_nullable.search.range.to.label = Datetime Nullable Range To in Search
+properties.datetime_nullable.search.range.from.placeholder = Datetime Nullable Placeholder Range From in Search
+properties.datetime_nullable.search.range.to.placeholder = Datetime Nullable Placeholder Range To in Search
+properties.datetime_nullable.error.INVALID_DATETIME = Datetime Nullable Invalid
+
+properties.time.label = Time
+properties.time.placeholder = Time Placeholder
+properties.time.search.label = Time in Search
+properties.time.search.placeholder = Time Placeholder in Search
+properties.time.search.range.from.label = Time Range From in Search
+properties.time.search.range.to.label = Time Range To in Search
+properties.time.search.range.from.placeholder = Time Placeholder Range From in Search
+properties.time.search.range.to.placeholder = Time Placeholder Range To in Search
+properties.time.error.NOT_NULLABLE = Time not Nullable error
+properties.time.error.INVALID_DATETIME = Time Invalid
+
+properties.time_nullable.label = Time Nullable
+properties.time_nullable.placeholder = Time Nullable Placeholder
+properties.time_nullable.search.label = Time Nullable in Search
+properties.time_nullable.search.placeholder = Time Nullable Placeholder in Search
+properties.time_nullable.search.range.from.label = Time Nullable Range From in Search
+properties.time_nullable.search.range.to.label = Time Nullable Range To in Search
+properties.time_nullable.search.range.from.placeholder = Time Nullable Placeholder Range From in Search
+properties.time_nullable.search.range.to.placeholder = Time Nullable Placeholder Range To in Search
+properties.time_nullable.error.INVALID_DATETIME = Time Nullable Invalid
+
 [es]
 name = Test de Definición de Item
 
@@ -328,3 +391,66 @@ properties.currency_nullable.search.range.to.label = Valor Monetario Nullable en
 properties.currency_nullable.search.range.to.placeholder = Valor Monetario Nullable Marcador en Modo Búsqueda Hasta
 properties.currency_nullable.error.TOO_LARGE = Valor Monetario Nullable demasiado larga error
 properties.currency_nullable.error.TOO_MANY_DECIMALS = Valor Monetario Nullable demasiados decimales error
+
+properties.date.label = Fecha
+properties.date.placeholder = Fecha Marcador
+properties.date.search.label = Fecha en Modo Búsqueda
+properties.date.search.placeholder = Fecha Marcador en Modo Búsqueda
+properties.date.search.range.from.label = Fecha en Modo Búsqueda Desde
+properties.date.search.range.from.placeholder = Fecha Marcador en Modo Búsqueda Desde
+properties.date.search.range.to.label = Fecha en Modo Búsqueda Hasta
+properties.date.search.range.to.placeholder = Fecha Marcador en Modo Búsqueda Hasta
+properties.date.error.NOT_NULLABLE = Fecha error de no Nullable
+properties.date.error.INVALID_DATETIME = Fecha error de invalida
+
+properties.date_nullable.label = Fecha Nullable
+properties.date_nullable.placeholder = Fecha Nullable Marcador
+properties.date_nullable.search.label = Fecha Nullable en Modo Búsqueda
+properties.date_nullable.search.placeholder = Fecha Nullable Marcador en Modo Búsqueda
+properties.date_nullable.search.range.from.label = Fecha Nullable en Modo Búsqueda Desde
+properties.date_nullable.search.range.from.placeholder = Fecha Nullable Marcador en Modo Búsqueda Desde
+properties.date_nullable.search.range.to.label = Fecha Nullable en Modo Búsqueda Hasta
+properties.date_nullable.search.range.to.placeholder = Fecha Nullable Marcador en Modo Búsqueda Hasta
+properties.date_nullable.error.INVALID_DATETIME = Fecha Nullable error de invalida
+
+properties.datetime.label = Fecha con Tiempo
+properties.datetime.placeholder = Fecha con Tiempo Marcador
+properties.datetime.search.label = Fecha con Tiempo en Modo Búsqueda
+properties.datetime.search.placeholder = Fecha con Tiempo Marcador en Modo Búsqueda
+properties.datetime.search.range.from.label = Fecha con Tiempo en Modo Búsqueda Desde
+properties.datetime.search.range.from.placeholder = Fecha con Tiempo Marcador en Modo Búsqueda Desde
+properties.datetime.search.range.to.label = Fecha con Tiempo en Modo Búsqueda Hasta
+properties.datetime.search.range.to.placeholder = Fecha con Tiempo Marcador en Modo Búsqueda Hasta
+properties.datetime.error.NOT_NULLABLE = Fecha con Tiempo error de no Nullable
+properties.datetime.error.INVALID_DATETIME = Fecha con Tiempo error de invalida
+
+properties.datetime_nullable.label = Fecha con Tiempo Nullable
+properties.datetime_nullable.placeholder = Fecha con Tiempo Nullable Marcador
+properties.datetime_nullable.search.label = Fecha con Tiempo Nullable en Modo Búsqueda
+properties.datetime_nullable.search.placeholder = Fecha con Tiempo Nullable Marcador en Modo Búsqueda
+properties.datetime_nullable.search.range.from.label = Fecha con Tiempo Nullable en Modo Búsqueda Desde
+properties.datetime_nullable.search.range.from.placeholder = Fecha con Tiempo Nullable Marcador en Modo Búsqueda Desde
+properties.datetime_nullable.search.range.to.label = Fecha con Tiempo Nullable en Modo Búsqueda Hasta
+properties.datetime_nullable.search.range.to.placeholder = Fecha con Tiempo Nullable Marcador en Modo Búsqueda Hasta
+properties.datetime_nullable.error.INVALID_DATETIME = Fecha con Tiempo Nullable error de invalida
+
+properties.time.label = Tiempo
+properties.time.placeholder = Tiempo Marcador
+properties.time.search.label = Tiempo en Modo Búsqueda
+properties.time.search.placeholder = Tiempo Marcador en Modo Búsqueda
+properties.time.search.range.from.label = Tiempo en Modo Búsqueda Desde
+properties.time.search.range.from.placeholder = Tiempo Marcador en Modo Búsqueda Desde
+properties.time.search.range.to.label = Tiempo en Modo Búsqueda Hasta
+properties.time.search.range.to.placeholder = Tiempo Marcador en Modo Búsqueda Hasta
+properties.time.error.NOT_NULLABLE = Tiempo error de no Nullable
+properties.time.error.INVALID_DATETIME = Tiempo error de invalida
+
+properties.time_nullable.label = Tiempo Nullable
+properties.time_nullable.placeholder = Tiempo Nullable Marcador
+properties.time_nullable.search.label = Tiempo Nullable en Modo Búsqueda
+properties.time_nullable.search.placeholder = Tiempo Nullable Marcador en Modo Búsqueda
+properties.time_nullable.search.range.from.label = Tiempo Nullable en Modo Búsqueda Desde
+properties.time_nullable.search.range.from.placeholder = Tiempo Nullable Marcador en Modo Búsqueda Desde
+properties.time_nullable.search.range.to.label = Tiempo Nullable en Modo Búsqueda Hasta
+properties.time_nullable.search.range.to.placeholder = Tiempo Nullable Marcador en Modo Búsqueda Hasta
+properties.time_nullable.error.INVALID_DATETIME = Tiempo Nullable error de invalida
