--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -8,6 +8,9 @@ no = no
 unspecified = unspecified
 any = any
 
+cancel = cancel
+ok = ok
+
 format_bold = bold
 format_italic = italic
 format_underline = underline
@@ -28,6 +31,9 @@ yes = si
 no = no
 unspecified = sin especificar
 any = cualquiera
+
+cancel = cancelar
+ok = ok
 
 format_bold = negrita
 format_italic = cursiva 
