--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.9.2",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
@@ -48,7 +49,9 @@
     "graphql": "^14.1.1",
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
+    "material-ui-pickers": "^2.2.4",
     "mini-css-extract-plugin": "^0.5.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
     "null-loader": "^0.1.1",
