--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "webpack-bundle-analyzer": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
