--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -226,6 +226,21 @@ properties.time_nullable.search.range.from.placeholder = Time Nullable Placehold
 properties.time_nullable.search.range.to.placeholder = Time Nullable Placeholder Range To in Search
 properties.time_nullable.error.INVALID_DATETIME = Time Nullable Invalid
 
+properties.location.label = Location
+properties.location.placeholder = Location Placeholder
+properties.location.search.label = Location in Search
+properties.location.search.placeholder = Location Placeholder in Search
+properties.location.search.distance.label = Location Distance
+properties.location.search.distance.placeholder = Location Placeholder
+properties.location.error.NOT_NULLABLE = Location not Nullable error
+
+properties.location_nullable.label = Location Nullable
+properties.location_nullable.placeholder = Location Nullable Placeholder
+properties.location_nullable.search.label = Location Nullable in Search
+properties.location_nullable.search.placeholder = Location Nullable Placeholder in Search
+properties.location_nullable.search.distance.label = Location Nullable Distance
+properties.location_nullable.search.distance.placeholder = Location Nullable Placeholder
+
 [es]
 name = Test de Definición de Item
 
@@ -454,3 +469,18 @@ properties.time_nullable.search.range.from.placeholder = Tiempo Nullable Marcado
 properties.time_nullable.search.range.to.label = Tiempo Nullable en Modo Búsqueda Hasta
 properties.time_nullable.search.range.to.placeholder = Tiempo Nullable Marcador en Modo Búsqueda Hasta
 properties.time_nullable.error.INVALID_DATETIME = Tiempo Nullable error de invalida
+
+properties.location.label = Ubicación
+properties.location.placeholder = Ubicación Marcador
+properties.location.search.label = Ubicación en Modo Búsqueda
+properties.location.search.placeholder = Ubicación Marcador en Modo Búsqueda
+properties.location.search.distance.label = Ubicación Distancia
+properties.location.search.distance.placeholder = Ubicación Distancia Marcador
+properties.location.error.NOT_NULLABLE = Ubicación error de no Nullable
+
+properties.location_nullable.label = Ubicación Nullable
+properties.location_nullable.placeholder = Ubicación Nullable Marcador
+properties.location_nullable.search.label = Ubicación Nullable en Modo Búsqueda
+properties.location_nullable.search.placeholder = Ubicación Nullable Marcador en Modo Búsqueda
+properties.location_nullable.search.distance.label = Ubicación Nullable Distancia
+properties.location_nullable.search.distance.placeholder = Ubicación Nullable Distancia Marcador
