--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -1,6 +1,7 @@
 [en]
 name = English
 number_decimal_separator = .
+word_separator = ,
 currency_format = $N
 
 yes = yes
@@ -25,6 +26,7 @@ format_add_video = add embed video
 [es]
 name = Español
 number_decimal_separator = ,
+word_separator = ,
 currency_format = N$
 
 yes = si
