--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "history": "^4.9.0",
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
+    "leaflet": "^1.4.0",
     "material-ui-pickers": "^2.2.4",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
@@ -62,6 +63,7 @@
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.4",
     "react-jss": "^8.6.1",
+    "react-leaflet": "^2.2.1",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.4.0",
     "sass-loader": "^7.1.0",
@@ -70,6 +72,7 @@
     "tslint": "^5.13.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3333",
+    "url-loader": "^1.1.2",
     "uuid": "^3.3.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
