starting file support

--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -241,6 +241,15 @@ properties.location_nullable.search.placeholder = Location Nullable Placeholder 
 properties.location_nullable.search.distance.label = Location Nullable Distance
 properties.location_nullable.search.distance.placeholder = Location Nullable Placeholder
 
+properties.images.label = Images
+properties.images.placeholder = Images Placeholder
+properties.images.error.NOT_NULLABLE = Images not Nullable error
+properties.images.error.TOO_LARGE = Images too many
+
+properties.images_nullable.label = Images Nullable
+properties.images_nullable.placeholder = Images Nullable Placeholder
+properties.images_nullable.error.TOO_LARGE = Images Nullable too many
+
 [es]
 name = Test de Definición de Item
 
@@ -484,3 +493,12 @@ properties.location_nullable.search.label = Ubicación Nullable en Modo Búsqued
 properties.location_nullable.search.placeholder = Ubicación Nullable Marcador en Modo Búsqueda
 properties.location_nullable.search.distance.label = Ubicación Nullable Distancia
 properties.location_nullable.search.distance.placeholder = Ubicación Nullable Distancia Marcador
+
+properties.images.label = Imágenes
+properties.images.placeholder = Imágenes Marcador
+properties.images.error.NOT_NULLABLE = Imágenes error de no Nullable
+properties.images.error.TOO_LARGE = Imágenes demasiadas
+
+properties.images_nullable.label = Imágenes Nullable
+properties.images_nullable.placeholder = Imágenes Nullable Marcador
+properties.images_nullable.error.TOO_LARGE = Imágenes nullable demasiadas
