--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "leaflet": "^1.4.0",
+    "material-ui-dropzone": "^2.3.4",
     "material-ui-pickers": "^2.2.4",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
