file support almost there

--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -21,7 +21,10 @@ format_list_numbered = numbered list
 format_list_bulleted = list
 format_add_image = add image
 format_add_file = add file
-format_add_video = add embed video 
+format_add_video = add embed video
+
+file_drag_and_drop_placeholder_active = Drop your files here...
+image_drag_and_drop_placeholder_active = Drop your pictures here...
 
 [es]
 name = Español
@@ -47,3 +50,6 @@ format_list_bulleted = lista
 format_add_image = agregar foto
 format_add_file = agregar archivo
 format_add_video = agregar video embebido
+
+file_drag_and_drop_placeholder_active = Suelta tus archivos aquí...
+image_drag_and_drop_placeholder_active = Suelta tus fotos aquí...
