--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "react-dropzone": "^10.1.3",
     "webpack-bundle-analyzer": "^3.1.0"
   },
   "devDependencies": {
@@ -52,7 +53,6 @@
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "leaflet": "^1.4.0",
-    "material-ui-dropzone": "^2.3.4",
     "material-ui-pickers": "^2.2.4",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
