classic file input done

--- a/data/cyclingexchangehub/forum/post/index.properties
+++ b/data/cyclingexchangehub/forum/post/index.properties
@@ -42,6 +42,7 @@ properties.content.search.placeholder = Search for a phrase in the Content
 properties.content.error.NOT_NULLABLE = The content cannot be empty
 properties.content.error.TOO_SMALL = The content cannot be empty
 properties.content.error.TOO_LARGE = You have surpassed the limit of characters for the content
+properties.content.error.INVALID_SUBTYPE_VALUE = Invalid HTML
 
 [es]
 name = Publicación
@@ -87,3 +88,4 @@ properties.content.search.placeholder = Buscar frase en el Contenido
 properties.content.error.NOT_NULLABLE = El contenido no puede quedar vacío
 properties.content.error.TOO_SMALL = El contenido no puede quedar vacío
 properties.content.error.TOO_LARGE = Has sobrepasado el límite de caracteres para el contenido
+properties.content.error.INVALID_SUBTYPE_VALUE = HTML Inválido
