--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -241,14 +241,14 @@ properties.location_nullable.search.placeholder = Location Nullable Placeholder 
 properties.location_nullable.search.distance.label = Location Nullable Distance
 properties.location_nullable.search.distance.placeholder = Location Nullable Placeholder
 
-properties.images.label = Images
-properties.images.placeholder = Images Placeholder
-properties.images.error.NOT_NULLABLE = Images not Nullable error
-properties.images.error.TOO_LARGE = Images too many
+properties.files.label = Files
+properties.files.placeholder = Files Placeholder
+properties.files.error.NOT_NULLABLE = Files not Nullable error
+properties.files.error.TOO_LARGE = Files too many
 
-properties.images_nullable.label = Images Nullable
-properties.images_nullable.placeholder = Images Nullable Placeholder
-properties.images_nullable.error.TOO_LARGE = Images Nullable too many
+properties.files_nullable.label = Files Nullable
+properties.files_nullable.placeholder = Files Nullable Placeholder
+properties.files_nullable.error.TOO_LARGE = Files Nullable too many
 
 [es]
 name = Test de Definición de Item
@@ -494,11 +494,11 @@ properties.location_nullable.search.placeholder = Ubicación Nullable Marcador e
 properties.location_nullable.search.distance.label = Ubicación Nullable Distancia
 properties.location_nullable.search.distance.placeholder = Ubicación Nullable Distancia Marcador
 
-properties.images.label = Imágenes
-properties.images.placeholder = Imágenes Marcador
-properties.images.error.NOT_NULLABLE = Imágenes error de no Nullable
-properties.images.error.TOO_LARGE = Imágenes demasiadas
+properties.files.label = Archivos
+properties.files.placeholder = Archivos Marcador
+properties.files.error.NOT_NULLABLE = Archivos error de no Nullable
+properties.files.error.TOO_LARGE = Archivos demasiadas
 
-properties.images_nullable.label = Imágenes Nullable
-properties.images_nullable.placeholder = Imágenes Nullable Marcador
-properties.images_nullable.error.TOO_LARGE = Imágenes nullable demasiadas
+properties.files_nullable.label = Archivos Nullable
+properties.files_nullable.placeholder = Archivos Nullable Marcador
+properties.files_nullable.error.TOO_LARGE = Archivos nullable demasiadas
