--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -23,8 +23,13 @@ format_add_image = add image
 format_add_file = add file
 format_add_video = add embed video
 
-file_drag_and_drop_placeholder_active = Drop your files here...
-image_drag_and_drop_placeholder_active = Drop your pictures here...
+file_uploader_placeholder_active = Drop your files here...
+image_uploader_placeholder_active = Drop your pictures here...
+file_uploader_invalid_type = Invalid File Type
+image_uploader_invalid_type = This file is not an image
+file_uploader_file_too_big = File is too big, maximum file size is {0}
+image_uploader_file_too_big = Your picture is too big, maximum file size is {0}
+file_uploader_byte_limit_exceed = You have surpassed the limit of {0} for file uploads
 
 [es]
 name = Español
@@ -51,5 +56,10 @@ format_add_image = agregar foto
 format_add_file = agregar archivo
 format_add_video = agregar video embebido
 
-file_drag_and_drop_placeholder_active = Suelta tus archivos aquí...
-image_drag_and_drop_placeholder_active = Suelta tus fotos aquí...
+file_uploader_placeholder_active = Suelta tus archivos aquí...
+image_uploader_placeholder_active = Suelta tus fotos aquí...
+file_uploader_invalid_type = Tipo de archivo inválido
+image_uploader_invalid_type = El archivo no es una imágen
+file_uploader_file_too_big = El archivo es demasiado grande, el máximo es de {0}
+image_uploader_file_too_big = Tu foto es demasiado grande, el máximo es de {0}
+file_uploader_byte_limit_exceed = Has sobrepasado el límite de {0} para subir archivos
