--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
     "@types/node": "^10.12.30",
+    "@types/pretty-bytes": "^5.1.0",
     "@types/properties-reader": "0.0.1",
     "@types/react": "^16.8.8",
     "@types/react-autosuggest": "^9.3.7",
@@ -59,6 +60,7 @@
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
     "null-loader": "^0.1.1",
+    "pretty-bytes": "^5.1.0",
     "properties-reader": "0.0.16",
     "react": "^16.8.4",
     "react-autosuggest": "^9.4.3",
