single file implemented

--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -250,6 +250,11 @@ properties.files_nullable.label = Files Nullable
 properties.files_nullable.placeholder = Files Nullable Placeholder
 properties.files_nullable.error.TOO_LARGE = Files Nullable too many
 
+properties.files_single.label = File
+properties.files_single.placeholder = File Placeholder
+properties.files_single.error.NOT_NULLABLE = File not Nullable error
+properties.files_single.error.TOO_LARGE = File only one
+
 [es]
 name = Test de Definición de Item
 
@@ -502,3 +507,8 @@ properties.files.error.TOO_LARGE = Archivos demasiadas
 properties.files_nullable.label = Archivos Nullable
 properties.files_nullable.placeholder = Archivos Nullable Marcador
 properties.files_nullable.error.TOO_LARGE = Archivos nullable demasiadas
+
+properties.files_single.label = Archivo
+properties.files_single.placeholder = Archivo Marcador
+properties.files_single.error.NOT_NULLABLE = Archivo error de no Nullable
+properties.files_single.error.TOO_LARGE = Archivo uno solo
