--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -25,11 +25,17 @@ format_add_video = add embed video
 
 file_uploader_placeholder_active = Drop your files here...
 image_uploader_placeholder_active = Drop your pictures here...
+file_uploader_placeholder_active_single = Drop your file here...
+image_uploader_placeholder_active_single = Drop your picture here...
 file_uploader_invalid_type = Invalid File Type
 image_uploader_invalid_type = This file is not an image
 file_uploader_file_too_big = File is too big, maximum file size is {0}
 image_uploader_file_too_big = Your picture is too big, maximum file size is {0}
 file_uploader_byte_limit_exceed = You have surpassed the limit of {0} for file uploads
+file_uploader_select_file = Select File
+image_uploader_select_file = Select Picture
+file_uploader_delete_file = Delete File
+image_uploader_delete_file = Delete Picture
 
 [es]
 name = Español
@@ -58,8 +64,14 @@ format_add_video = agregar video embebido
 
 file_uploader_placeholder_active = Suelta tus archivos aquí...
 image_uploader_placeholder_active = Suelta tus fotos aquí...
+file_uploader_placeholder_active_single = Suelta tu archivo aquí...
+image_uploader_placeholder_active_single = Suelta tu foto aquí...
 file_uploader_invalid_type = Tipo de archivo inválido
 image_uploader_invalid_type = El archivo no es una imágen
 file_uploader_file_too_big = El archivo es demasiado grande, el máximo es de {0}
 image_uploader_file_too_big = Tu foto es demasiado grande, el máximo es de {0}
 file_uploader_byte_limit_exceed = Has sobrepasado el límite de {0} para subir archivos
+file_uploader_select_file = Seleccionar Archivo
+image_uploader_select_file = Seleccionar Foto
+file_uploader_delete_file = Borrar Archivo
+image_uploader_delete_file = Borrar Foto
