--- a/data/__internal__/test/index.properties
+++ b/data/__internal__/test/index.properties
@@ -1,5 +1,7 @@
 [en]
 name = Test Module
+searchFormTitle = Test Module Search Form Title
 
 [es]
 name = Módulo de Prueba
+searchFormTitle = Módulo de Prueba Título de Búsqueda
