--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -1,7 +1,11 @@
 [en]
 name = Item Definition Test
+searchFormTitle = Item Definition Test Search Form Title
+createFormTitle = Item Definition Test Create Form Title
+editFormTitle = Item Definition Test Edit Form Title
 
 properties.boolean.label = Boolean
+properties.boolean.description = Boolean Description
 properties.boolean.search.label = Boolean in Search
 
 properties.boolean_nullable.label = Boolean Nullable
@@ -257,6 +261,9 @@ properties.files_single.error.TOO_LARGE = File only one
 
 [es]
 name = Test de Definición de Item
+searchFormTitle = Test de Definición de Item Título de Búsqueda
+createFormTitle = Test de Definición de Item Título de Creación
+editFormTitle = Test de Definición de Item Título de Edición
 
 properties.boolean.label = Valor Booleano
 properties.boolean.search.label = Valor Booleano en Modo Búsqueda
