--- a/data/__internal__/test/submodule/index.properties
+++ b/data/__internal__/test/submodule/index.properties
@@ -1,5 +1,7 @@
 [en]
 name = Test Submodule
+searchFormTitle = Test Submodule Search Form Title
 
 [es]
 name = Submódulo de Prueba
+searchFormTitle = Submódulo de Prueba Título de Búsqueda
