--- a/data/__internal__/test/submodule/subitem.properties
+++ b/data/__internal__/test/submodule/subitem.properties
@@ -1,5 +1,12 @@
 [en]
 name = Item Definition of submodule Test
+searchFormTitle = Item Definition of submodule Test Search Form Title
+createFormTitle = Item Definition of submodule Test Create Form Title
+editFormTitle = Item Definition of submodule Test Edit Form Title
+
 
 [es]
 name = Test de Definición de Item en un Submódulo
+searchFormTitle = Test de Definición de Item en un Submódulo Título de Búsqueda
+createFormTitle = Test de Definición de Item en un Submódulo Título de Creación
+editFormTitle = Test de Definición de Item en un Submódulo Título de Edición
