--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -1,5 +1,9 @@
 [en]
 name = User
+searchFormTitle = Log In
+searchFormTitleAlt = Find Users
+createFormTitle = Sign Up
+editFormTitle = Edit Profile
 
 properties.username.label = Username
 properties.username.placeholder = Type an username
@@ -21,6 +25,10 @@ properties.password.error.TOO_LARGE = Password too long
 
 [es]
 name = Usuario
+searchFormTitle = Iniciar Sesión
+searchFormTitleAlt = Buscar Usuario
+createFormTitle = Regristrarse
+editFormTitle = Editar Perfil
 
 properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
