--- a/data/cyclingexchangehub/forum/post/index.properties
+++ b/data/cyclingexchangehub/forum/post/index.properties
@@ -1,5 +1,8 @@
 [en]
 name = Post
+searchFormTitle = Search
+createFormTitle = New Post
+editFormTitle = Edit Post
 
 properties.category.label = Category
 properties.category.placeholder = Select a Category
@@ -46,6 +49,9 @@ properties.content.error.INVALID_SUBTYPE_VALUE = Invalid HTML
 
 [es]
 name = Publicación
+searchFormTitle = Buscar
+createFormTitle = Nueva Publicación
+editFormTitle = Editar Publicación
 
 properties.category.label = Categoría
 properties.category.placeholder = Seleccione una Categoría
