--- a/data/__internal__/test/submodule/subitem.properties
+++ b/data/__internal__/test/submodule/subitem.properties
@@ -4,9 +4,62 @@ searchFormTitle = Item Definition of submodule Test Search Form Title
 createFormTitle = Item Definition of submodule Test Create Form Title
 editFormTitle = Item Definition of submodule Test Edit Form Title
 
+properties.string_nullable.label = String Nullable
+properties.string_nullable.placeholder = String Nullable Placeholder
+properties.string_nullable.description = Type Hello to make the dependent field be world, leave empty to make the dependent field dissapear and turn null
+properties.string_nullable.search.label = String Nullable in Search
+properties.string_nullable.search.placeholder = String Nullable Placeholder in Search
+properties.string_nullable.error.TOO_LARGE = String Nullable too large error
+
+properties.dependency_string.label = String Nullable with Dependency
+properties.dependency_string.placeholder = String Nullable with Dependency Placeholder
+properties.dependency_string.search.label = String Nullable with Dependency in Search
+properties.dependency_string.search.placeholder = String Nullable with Dependency Placeholder in Search
+properties.dependency_string.error.TOO_LARGE = String Nullable with Dependency too large error
+
+properties.dependency_integer.label = Dependency Integer
+properties.dependency_integer.placeholder = Dependency Integer Placeholder
+properties.dependency_integer.search.label = Dependency Integer Search
+properties.dependency_integer.search.placeholder = Dependency Integer Search Placeholder
+properties.dependency_integer.search.range.from.label = Dependency Integer Search From
+properties.dependency_integer.search.range.from.placeholder = Dependency Integer Search From Placeholder
+properties.dependency_integer.search.range.to.label = Dependency Integer Search To
+properties.dependency_integer.search.range.to.placeholder = Dependency Integer Search To Placeholder
+properties.dependency_integer.values.1 = one
+properties.dependency_integer.values.2 = two
+properties.dependency_integer.values.3 = three
+properties.dependency_integer.values.4 = four
+properties.dependency_integer.error.NOT_NULLABLE = Dependency Integer Not nullable Error
 
 [es]
 name = Test de Definición de Item en un Submódulo
 searchFormTitle = Test de Definición de Item en un Submódulo Título de Búsqueda
 createFormTitle = Test de Definición de Item en un Submódulo Título de Creación
 editFormTitle = Test de Definición de Item en un Submódulo Título de Edición
+
+properties.string_nullable.label = String Nullable
+properties.string_nullable.placeholder = String Nullable Marcador
+properties.string_nullable.description = Escribe Hello para hacer la string con dependencia tenga valor de world, dejala vacia para que desaparezca y se vuelva null
+properties.string_nullable.search.label = String Nullable en Modo Búsqueda
+properties.string_nullable.search.placeholder = String Nullable Marcador en Modo Búsqueda
+properties.string_nullable.error.TOO_LARGE = String Nullable demasiado larga error
+
+properties.dependency_string.label = String Nullable con Dependencia
+properties.dependency_string.placeholder = String Nullable con Dependencia Marcador
+properties.dependency_string.search.label = String Nullable con Dependencia en Modo Búsqueda
+properties.dependency_string.search.placeholder = String Nullable con Dependencia Marcador en Modo Búsqueda
+properties.dependency_string.error.TOO_LARGE = String Nullable con Dependencia demasiado larga error
+
+properties.dependency_integer.label = Valor Entero con Dependencia
+properties.dependency_integer.placeholder = Valor Entero con Dependencia Marcador
+properties.dependency_integer.search.label = Valor Entero con Dependencia en Modo Búsqueda
+properties.dependency_integer.search.placeholder = Valor Entero con Dependencia Marcador en Modo Búsqueda
+properties.dependency_integer.search.range.from.label = Valor Entero con Dependencia en Modo Búsqueda Desde
+properties.dependency_integer.search.range.from.placeholder = Valor Entero con Dependencia Marcador en Modo Búsqueda Desde
+properties.dependency_integer.search.range.to.label = Valor Entero con Dependencia Búsqueda Hasta
+properties.dependency_integer.search.range.to.placeholder = Valor Entero con Dependencia Marcador en Modo Búsqueda Hasta
+properties.dependency_integer.values.1 = uno
+properties.dependency_integer.values.2 = dos
+properties.dependency_integer.values.3 = tres
+properties.dependency_integer.values.4 = cuatro
+properties.dependency_integer.error.NOT_NULLABLE = Valor Entero con Dependencia error de no Nullable
