--- a/data/__internal__/test/submodule/index.properties
+++ b/data/__internal__/test/submodule/index.properties
@@ -2,6 +2,20 @@
 name = Test Submodule
 searchFormTitle = Test Submodule Search Form Title
 
+properties.propext_string.label = Propext String
+properties.propext_string.placeholder = Propext String Placeholder
+properties.propext_string.search.label = Propext String in Search
+properties.propext_string.search.placeholder = Propext String Placeholder in Search
+properties.propext_string.error.NOT_NULLABLE = Propext String not Nullable error
+properties.propext_string.error.TOO_LARGE = Propext String too large error
+
 [es]
 name = Submódulo de Prueba
 searchFormTitle = Submódulo de Prueba Título de Búsqueda
+
+properties.propext_string.label = Propext String
+properties.propext_string.placeholder = Propext String Marcador
+properties.propext_string.search.label = Propext String en Modo Búsqueda
+properties.propext_string.search.placeholder = Propext String Marcador en Modo Búsqueda
+properties.propext_string.error.NOT_NULLABLE = Propext String error de no Nullable
+properties.propext_string.error.TOO_LARGE = Propext String demasiado larga error
