invalid reasons work now

--- a/data/__internal__/test/submodule/index.properties
+++ b/data/__internal__/test/submodule/index.properties
@@ -9,6 +9,13 @@ properties.propext_string.search.placeholder = Propext String Placeholder in Sea
 properties.propext_string.error.NOT_NULLABLE = Propext String not Nullable error
 properties.propext_string.error.TOO_LARGE = Propext String too large error
 
+properties.self_destructing_string.label = Self Destructing Propext String
+properties.self_destructing_string.placeholder = Self Destructing Propext String Placeholder
+properties.self_destructing_string.search.label = Self Destructing Propext String in Search
+properties.self_destructing_string.search.placeholder = Self Destructing Propext String Placeholder in Search
+properties.self_destructing_string.error.NOT_SAME = It cannot be the same
+properties.self_destructing_string.error.TOO_LARGE = Self Destructing Propext String too large error
+
 [es]
 name = Submódulo de Prueba
 searchFormTitle = Submódulo de Prueba Título de Búsqueda
@@ -19,3 +26,10 @@ properties.propext_string.search.label = Propext String en Modo Búsqueda
 properties.propext_string.search.placeholder = Propext String Marcador en Modo Búsqueda
 properties.propext_string.error.NOT_NULLABLE = Propext String error de no Nullable
 properties.propext_string.error.TOO_LARGE = Propext String demasiado larga error
+
+properties.self_destructing_string.label = Autodestruye Propext String
+properties.self_destructing_string.placeholder = Autodestruye Propext String Marcador
+properties.self_destructing_string.search.label = Autodestruye Propext String en Modo Búsqueda
+properties.self_destructing_string.search.placeholder = Autodestruye Propext String Marcador en Modo Búsqueda
+properties.self_destructing_string.error.NOT_SAME = No puede ser el mismo
+properties.self_destructing_string.error.TOO_LARGE = Autodestruye Propext String demasiado larga error
