--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -37,6 +37,8 @@ image_uploader_select_file = Select Picture
 file_uploader_delete_file = Delete File
 image_uploader_delete_file = Delete Picture
 
+rare_properties_label = More Options
+
 [es]
 name = Español
 number_decimal_separator = ,
@@ -75,3 +77,5 @@ file_uploader_select_file = Seleccionar Archivo
 image_uploader_select_file = Seleccionar Foto
 file_uploader_delete_file = Borrar Archivo
 image_uploader_delete_file = Borrar Foto
+
+rare_properties_label = Más Opciones
