--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
     "@types/deep-equal": "^1.0.1",
